# zenkaitv

./: .env.example  .gitignore  README.md  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  run-local.sh  run-production.sh  setup.sh
api/: Dockerfile  pyproject.toml
api/app/: __init__.py  blob_storage.py  catalog.py  celery_app.py  config.py  db.py  dependencies.py  hls.py  main.py  media_library.py  models.py  notes.py  schemas.py  security.py  seed.py
api/app/admin/: __init__.py  blob_catalog.py  common.py
api/app/admin/routes/: catalog_sync.py  movies.py  reactions.py  uploads.py  users.py
api/app/routes/: __init__.py  admin.py  auth.py  catalog.py  health.py  media.py  notes.py  playback.py  reactions.py
infra/: Caddyfile
scripts/: requirements-azure-storage-test.txt  test_blob_storage.py
web/: Dockerfile  Dockerfile.production  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css  types.ts
web/src/components/: AppHeader.tsx  MovieGrid.tsx  NoteReactionBar.tsx  TypewriterText.tsx  VideoPlayer.tsx
web/src/features/admin/: AdminView.tsx
web/src/features/admin/components/: AdminHeroSection.tsx  BlobUploadSection.tsx  CatalogSyncSection.tsx  ReactionListSection.tsx  (+3 more)
web/src/features/home/: HomeView.tsx
web/src/hooks/: usePlaybackCatalog.ts  useSession.ts
web/src/lib/: api.ts  config.ts  utils.ts
web/src/styles/: admin.css  base.css  home.css  navigation.css  responsive.css
worker/: Dockerfile  pyproject.toml
worker/app/: __init__.py  blob_storage.py  config.py  worker_app.py
