[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-movies-api"
version = "0.1.0"
description = "FastAPI service for the movie streaming platform"
requires-python = ">=3.11"
dependencies = [
  "azure-identity>=1.24,<2.0",
  "azure-storage-blob>=12.27,<13.0",
  "fastapi>=0.115,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
